# PDCursesMod

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: github_actions_build.yml
cmake/: build_dependencies.cmake  dll_version.cmake  gen_config_header.cmake  get_version.cmake  project_common.cmake
cmake/sdl2_ttf/: CMakeLists.txt
dos/: CMakeLists.txt
dosvga/: CMakeLists.txt
gl/: CMakeLists.txt
ncurses/: CMakeLists.txt
os2/: CMakeLists.txt
sdl2/: CMakeLists.txt
vt/: CMakeLists.txt
wincon/: CMakeLists.txt
wingui/: CMakeLists.txt
